# cesm-lm4-config

./: README.md
.cime/: config_batch.xml  config_compilers.xml  config_machines.xml
case/cesm_seasons_F/: user_nl_cam
scripts/: CESM_PRECT_U850_12months.py  pyproject.toml
