[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cartopy>=0.23.0",
    "geocat-comp>=2024.3.0",
    "imageio>=2.37.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "xarray>=2024.7.0",
]
